Allow to use HAML templates

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <ul>
   <li><a href="#/">Start</a></li>
-  <li><a href="#/home">Home</a></li>
+  <li><a href="#/home">Home (embedded and external images)</a></li>
   <li><a href="#/about">About</a></li>
+  <li><a href="#/haml">HAML (test HAML templates)</a></li>
 </ul>
 
 <ng-view></ng-view>
