Add ExtractText and Html wepback plugins

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <title></title>
-  <script src="./dest/app.js"></script>
+  <title>Angular Webpack</title>
 </head>
 <body ng-app="app" ng-strict-di>
 
